# TikTok_Scraper

./: .gitignore  pyproject.toml  requirements.txt
src/: .envexample
src/tiktok_scraper/Core/: bluestacks.py  global_vars.py  logger.py  main.py  processing.py  selenium_utils.py  test.html
